tests/ui/consts/issue-25826.stderr
error[E0277]: pointers cannot be reliably compared during const eval
  --> $DIR/issue-25826.rs:3:30
   |
LL |     const A: bool = unsafe { id::<u8> as *const () < id::<u16> as *const () };
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: trait `PartialOrd` is implemented but not `const`
  --> $SRC_DIR/core/src/ptr/const_ptr.rs:LL:COL
   = note: see issue #53020 <https://github.com/rust-lang/rust/issues/53020> for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
